# attracts_interface

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
include/attracts_interface/: game_client_node.hpp  gamepad_node.hpp
launch/: game_client.launch.py  gamepad.launch.py
src/: game_client_main.cpp  game_client_node.cpp  gamepad_main.cpp  gamepad_node.cpp
test/: test_game_client.cpp  test_gamepad.cpp
